<resources>
    <string name="app_name">InsuranceAdjusterApp</string>

    <!-- Inspection request list/map -->
    <string name="activity_inspection_requests_number">%1$d zlecenia</string>
    <string name="activity_inspection_requests_menu_map">Mapa</string>
    <string name="activity_inspection_requests_menu_list">Lista</string>
    <string name="activity_inspection_requests_menu_action_simulate_add">Backend: Dodaj</string>

    <string name="inspection_request_status">Status</string>
    <string name="inspection_request_status_assigned">Przypisany</string>
    <string name="inspection_request_status_rejected">Odrzucony</string>
    <string name="inspection_request_status_accepted">Zaakceptowany</string>

    <string name="inspection_request_not_appointed">Nieumówiony</string>

    <string name="inspection_request_List_item_card_name">%1$s %2$s</string>
    <string name="inspection_request_List_item_accept_button">Akceptuj</string>
    <string name="inspection_request_List_item_reject_button">Odrzuć</string>
    <string name="inspection_request_List_item_details_button">Szczegóły</string>

    <!-- Inspection request details -->
    <string name="activity_inspection_request_title">InspectionRequest</string>

    <string name="activity_inspection_request_tab_inspection_request">Zlecenie</string>
    <string name="activity_inspection_request_tab_claim">Szkoda</string>
    <string name="activity_inspection_request_tab_inspection">Oględziny</string>
    <string name="activity_inspection_request_tab_documents">Dokumenty</string>
    <string name="activity_inspection_request_tab_notes">Notatki</string>

    <string name="activity_inspection_request_new_note_title">Nowa notatka</string>
    <string name="activity_inspection_request_new_note_content">Tekst notatki</string>
    <string name="activity_inspection_request_new_note_save">Zapisz</string>

    <string name="action_download">Pobierz</string>
    <string name="document_downloading">TODO: Pobieranie dokumentu z backendu</string>

    <string name="claim">Szkoda</string>
    <string name="objects">Przedmioty</string>

    <string name="loginButton">Zaloguj</string>
    <string name="login_text">Login</string>
    <string name="password_text">Hasło</string>

    <!-- Notifications -->
    <string name="notification_new_inspection_request_channel_id">newInspectionRequest</string>
    <string name="notification_new_inspection_request_channel_desc">Nowe zlecenia oględzin</string>

    <string name="notification_new_inspection_request_title">Nowe zlecenie oględzin</string>
    <string name="notification_new_inspection_request_text">Zlecenie oględzin: %s</string>
</resources>
