<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="dev.ph0ndragx.insuranceadjusterapp.model.Status"/>

        <variable
            name="viewmodel"
            type="dev.ph0ndragx.insuranceadjusterapp.inspectionrequests.InspectionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:paddingTop="?attr/actionBarSize">

        <View
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/filter_statuses_section_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspection_request_status"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/colorOnPrimary"
            android:layout_margin="@dimen/inspections_requests_back_layer_section_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_checkbox_assigned"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/inspections_requests_back_layer_statuses_margin"
            android:checked="@={viewmodel.filter.assignedStatusCheckbox}"
            android:text="@string/inspection_request_status_assigned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_statuses_section_header"
            tools:text="Przypisany" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_checkbox_rejected"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/inspections_requests_back_layer_statuses_margin"
            android:checked="@={viewmodel.filter.rejectedStatusCheckbox}"
            android:text="@string/inspection_request_status_rejected"
            app:layout_constraintStart_toEndOf="@+id/filter_checkbox_assigned"
            app:layout_constraintTop_toBottomOf="@+id/filter_statuses_section_header"
            tools:text="Odrzucony" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_checkbox_accepted"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/inspections_requests_back_layer_statuses_margin"
            android:checked="@={viewmodel.filter.acceptedStatusCheckbox}"
            android:text="@string/inspection_request_status_accepted"
            app:layout_constraintStart_toEndOf="@+id/filter_checkbox_rejected"
            app:layout_constraintTop_toBottomOf="@+id/filter_statuses_section_header"
            tools:text="Nieprzypisany" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>